--- a/index.html
+++ b/index.html
@@ -687,5 +687,15 @@
     <script type="module" src="lanyard-3d.js"></script>
     <script src="faulty-terminal.js"></script>
     <script src="script.js"></script>
+    
+    <!-- Cal floating-popup embed code begins -->
+    <script type="text/javascript">
+      (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
+Cal("init", "book", {origin:"https://app.cal.com"});
+
+      Cal.ns.book("floatingButton", {"calLink":"athipsom/book","config":{"layout":"month_view"},"buttonText":"Schedule a Call"}); 
+      Cal.ns.book("ui", {"hideEventTypeDetails":false,"layout":"month_view"});
+    </script>
+    <!-- Cal floating-popup embed code ends -->
 </body>
 </html>
